# docs/swagger.yaml
@@ -109,21 +109,21 @@ definitions:
         type: string
       name:
         type: string
-      phone_number:
+      phoneNumber:
         type: string
     type: object
   github_com_gabrielmrtt_taski_internal_user.UserDataDto:
     properties:
       about:
         type: string
-      display_name:
+      displayName:
         type: string
-      profile_picture_file_id:
+      profilePictureFileId:
         type: string
     type: object
   github_com_gabrielmrtt_taski_internal_user.UserDto:
     properties:
-      created_at:
+      createdAt:
         type: string
       credentials:
         $ref: '#/definitions/github_com_gabrielmrtt_taski_internal_user.UserCredentialsDto'
@@ -133,7 +133,7 @@ definitions:
         type: string
       status:
         type: string
-      updated_at:
+      updatedAt:
         type: string
     type: object
   github_com_gabrielmrtt_taski_internal_user.UserLoginDto:
@@ -268,6 +268,19 @@ definitions:
     type: object
   internal_organization_http.InviteUserToOrganizationResponse:
     properties:
+      message:
+        type: string
+      resource:
+        type: string
+      status:
+        type: integer
+      timestamp:
+        type: string
+    type: object
+  internal_organization_http.ListMyOrganizationInvitesResponse:
+    properties:
+      data:
+        $ref: '#/definitions/github_com_gabrielmrtt_taski_internal_organization.OrganizationDto'
       message:
         type: string
       resource:
@@ -808,6 +821,9 @@ paths:
         name: perPage
         type: integer
       - in: query
+        name: relations
+        type: string
+      - in: query
         name: sortBy
         type: string
       - in: query
@@ -879,6 +895,137 @@ paths:
       summary: Create an organization
       tags:
       - Organization
+  /organization-invites:
+    get:
+      consumes:
+      - application/json
+      description: Returns organizations the authenticated user has been invited to.
+      parameters:
+      - in: query
+        name: page
+        type: integer
+      - in: query
+        name: per_page
+        type: integer
+      - in: query
+        name: relations
+        type: string
+      - in: query
+        name: sort_by
+        type: string
+      - in: query
+        name: sort_direction
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/internal_organization_http.ListMyOrganizationInvitesResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/github_com_gabrielmrtt_taski_internal_core_http.HttpErrorResponse'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/github_com_gabrielmrtt_taski_internal_core_http.HttpErrorResponse'
+        "403":
+          description: Forbidden
+          schema:
+            $ref: '#/definitions/github_com_gabrielmrtt_taski_internal_core_http.HttpErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/github_com_gabrielmrtt_taski_internal_core_http.HttpErrorResponse'
+      summary: List my organization invites
+      tags:
+      - Organization Invites
+  /organization-invites/:organization_id/user/:user_id/accept-invitation:
+    patch:
+      consumes:
+      - application/json
+      description: Accept organization user invitation
+      parameters:
+      - description: Organization ID
+        in: path
+        name: organization_id
+        required: true
+        type: string
+      - description: User ID
+        in: path
+        name: user_id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/internal_organization_http.AcceptOrganizationUserInvitationResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/github_com_gabrielmrtt_taski_internal_core_http.HttpErrorResponse'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/github_com_gabrielmrtt_taski_internal_core_http.HttpErrorResponse'
+        "403":
+          description: Forbidden
+          schema:
+            $ref: '#/definitions/github_com_gabrielmrtt_taski_internal_core_http.HttpErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/github_com_gabrielmrtt_taski_internal_core_http.HttpErrorResponse'
+      summary: Accept organization user invitation
+      tags:
+      - Organization Invites
+  /organization-invites/:organization_id/user/:user_id/refuse-invitation:
+    patch:
+      consumes:
+      - application/json
+      description: Refuse organization user invitation
+      parameters:
+      - description: Organization ID
+        in: path
+        name: organization_id
+        required: true
+        type: string
+      - description: User ID
+        in: path
+        name: user_id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/internal_organization_http.RefuseOrganizationUserInvitationResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/github_com_gabrielmrtt_taski_internal_core_http.HttpErrorResponse'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/github_com_gabrielmrtt_taski_internal_core_http.HttpErrorResponse'
+        "403":
+          description: Forbidden
+          schema:
+            $ref: '#/definitions/github_com_gabrielmrtt_taski_internal_core_http.HttpErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/github_com_gabrielmrtt_taski_internal_core_http.HttpErrorResponse'
+      summary: Refuse organization user invitation
+      tags:
+      - Organization Invites
   /organization/:organization_id:
     delete:
       consumes:
@@ -1032,6 +1179,9 @@ paths:
       - in: query
         name: per_page
         type: integer
+      - in: query
+        name: relations
+        type: string
       - in: query
         name: sort_by
         type: string
@@ -1237,6 +1387,9 @@ paths:
       - in: query
         name: perPage
         type: integer
+      - in: query
+        name: relations
+        type: string
       - in: query
         name: roleId
         type: string
@@ -1459,100 +1612,6 @@ paths:
           schema:
             $ref: '#/definitions/github_com_gabrielmrtt_taski_internal_core_http.HttpErrorResponse'
       summary: Update organization user
-      tags:
-      - Organization User
-  /organization/:organization_id/user/:user_id/accept-invitation:
-    patch:
-      consumes:
-      - application/json
-      description: Accepts an organization user invitation. Only the user itself can
-        accept the invitation.
-      parameters:
-      - description: Organization ID
-        in: path
-        name: organization_id
-        required: true
-        type: string
-      - description: User ID
-        in: path
-        name: user_id
-        required: true
-        type: string
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/internal_organization_http.AcceptOrganizationUserInvitationResponse'
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/github_com_gabrielmrtt_taski_internal_core_http.HttpErrorResponse'
-        "401":
-          description: Unauthorized
-          schema:
-            $ref: '#/definitions/github_com_gabrielmrtt_taski_internal_core_http.HttpErrorResponse'
-        "403":
-          description: Forbidden
-          schema:
-            $ref: '#/definitions/github_com_gabrielmrtt_taski_internal_core_http.HttpErrorResponse'
-        "404":
-          description: Not Found
-          schema:
-            $ref: '#/definitions/github_com_gabrielmrtt_taski_internal_core_http.HttpErrorResponse'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/github_com_gabrielmrtt_taski_internal_core_http.HttpErrorResponse'
-      summary: Accept organization user invitation
-      tags:
-      - Organization User
-  /organization/:organization_id/user/:user_id/refuse-invitation:
-    patch:
-      consumes:
-      - application/json
-      description: Refuses an organization user invitation. Only the user itself can
-        refuse the invitation.
-      parameters:
-      - description: Organization ID
-        in: path
-        name: organization_id
-        required: true
-        type: string
-      - description: User ID
-        in: path
-        name: user_id
-        required: true
-        type: string
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/internal_organization_http.RefuseOrganizationUserInvitationResponse'
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/github_com_gabrielmrtt_taski_internal_core_http.HttpErrorResponse'
-        "401":
-          description: Unauthorized
-          schema:
-            $ref: '#/definitions/github_com_gabrielmrtt_taski_internal_core_http.HttpErrorResponse'
-        "403":
-          description: Forbidden
-          schema:
-            $ref: '#/definitions/github_com_gabrielmrtt_taski_internal_core_http.HttpErrorResponse'
-        "404":
-          description: Not Found
-          schema:
-            $ref: '#/definitions/github_com_gabrielmrtt_taski_internal_core_http.HttpErrorResponse'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/github_com_gabrielmrtt_taski_internal_core_http.HttpErrorResponse'
-      summary: Refuse organization user invitation
       tags:
       - Organization User
   /user-registration:
